<resources>
    <string name="app_name">WanAndroid</string>

    <string name="home_name">首页</string>
    <string name="tree_name">体系</string>
    <string name="error_retry">数据加载失败，请重试</string>
    <string name="click_retry">点击重试</string>
    <string name="article_author">Android轮子哥</string>
    <string name="top_tip">置顶</string>
    <string name="new_fresh">新</string>
    <string name="new_project">最新项目</string>
    <string name="platform_fragment">公众号</string>
    <string name="just">刚刚</string>
    <string name="article_title">AndroidMVVM框架实践</string>
    <string name="article_content">一个Jetpack结合MVVM的快速开发框架，基于MVVM模式集成谷歌官方推荐的JetPack组件库：LiveData、ViewModel、Lifecycle组件 使用Kotlin语言，添加大量拓展函数，简化代码 加入Retrofit网络请求</string>
    <string name="article_chapter"><![CDATA[分类>项目]]></string>
    <string name="no_data">暂无数据,请重试</string>
    <string name="no_net">网络异常,请重试</string>
    <string name="home_fragment">首页</string>
    <string name="project_fragment">项目</string>
    <string name="square_fragment">广场</string>
    <string name="mine_fragment">我的</string>
    <string name="loading">加载中</string>


    <string name="sure">确定</string>
    <string name="cancel">取消</string>


    <string name="my_integral">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="my_record">历史记录</string>
    <string name="my_user">点击头像登陆</string>
    <string name="my_grade">等级:</string>
    <string name="my_rank">排名:</string>
    <string name="my_ellipsis">--</string>
    <string name="my_setting">系统设置</string>
    <string name="my_exit">退出登录</string>
    <string name="exit_confirm">确定退出登陆吗？</string>
    <string name="exit_succeed">退出登陆成功</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="clear">清空</string>
    <string name="date">2022\-06\-07 00:00:00</string>
    <string name="delete_succeed">删除成功</string>

    <string name="setting">设置</string>
    <string name="setting_dark">夜间模式</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_scan">扫码下载</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_web">官方网站</string>
    <string name="setting_project">项目源码</string>
    <string name="setting_copyright">版权声明</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_cache">0MB</string>
    <string name="setting_recommend">好用的话推荐给你的小伙伴吧</string>
    <string name="setting_version">当前版本 %s</string>
    <string name="setting_site">https://www.wanandroid.com</string>
    <string name="setting_code">RainyJiang22/WanAndroid2021</string>
    <string name="setting_tips">仅作个人及非商业用途</string>
    <string name="setting_desc">一个练习时长一年半的安卓菜鸟程序员</string>
    <string name="clear_cache">确定清理缓存吗</string>
    <string name="clear_success">清理成功</string>
    <string name="setting_repository">https://github.com/RainyJiang22/WanAndroid2021</string>
    <string name="copyright_content">本APP所使用的所有API均由 玩Android 网站提供，仅供学习交流，不可用于任何商业用途。</string>
    <string name="qq">3434481891</string>
    <string name="email">jiangshiyuxs@email.com</string>
    <string name="github">github.com/RainyJiang22</string>
    <string name="login">登录</string>
    <string name="user_login">用户名</string>
    <string name="login_tip">需使用wanandroid账号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="no_account">没有账号,点击注册</string>
    <string name="register">注册</string>
    <string name="user_register">用户注册</string>
    <string name="register_tip">注册后才可登录</string>
    <string name="re_password">重复密码</string>
    <string name="have_account">已有账户，去登陆</string>
    <string name="re_enter_password">两次密码不一致</string>
    <string name="please_login">请先登录</string>
    <string name="exited_success">退出登录成功</string>
    <string name="anonymous">匿名</string>
    <string name="integral">1024</string>
    <string name="integral_reason">签到</string>
    <string name="integral_desc">2020\-06\-02 00:00:10 签到 ，积分：20 + 20</string>
    <string name="integral_count">+1024</string>
    <string name="integral_help">https://www.wanandroid.com/blog/show/2653</string>
    <string name="integral_rank">999+</string>
    <string name="integral_name">两年的菜鸡</string>
    <string name="integral_lv">Lv.%d</string>
    <string name="integral_my_lv">Lv.%s</string>
    <string name="leaderboard">积分排行</string>
    <string name="pending_review">待审核</string>
    <string name="delete">删除</string>

    <string name="delete_share_confirm">确定删除此分享文章吗?</string>
    <string name="share_article">分享文章</string>
    <string name="share_title_tip">100字以内</string>
    <string name="share_title">文章标题</string>
    <string name="share_link">文章链接</string>
    <string name="share_link_tip">例如:https://www.wanandroid.com</string>
    <string name="share">分享</string>
    <string name="share_article_tip">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab; \n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核; \n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响; \n4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。 \n5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>
    <string name="share_tip">温馨提示</string>
    <string name="share_succeed">分享成功</string>

    <!--搜索页-->
    <string name="search_tip">输入关键字搜索</string>
    <string name="search_hot">热门搜索(目前搜索最多的关键词)</string>
    <string name="search_history">搜索历史(保留最近前十条搜索记录)</string>

    <!--网页-->
    <string name="web_share">分享</string>
    <string name="web_refresh">刷新</string>
    <string name="web_browser">用浏览器打开</string>
    <string name="web_share_url">%1$s分享【%2$s】：%3$s</string>
    <string name="text_plan">text/plain</string>
    <string name="scan_tip">将二维码/条码放入框中，即可自动扫描</string>
    <string name="identify_error">未识别到二维码</string>
    <string name="identify_succeed">识别成功</string>
    <string name="open_camera_failed">打开相机失败</string>
    <string name="open_flash">打开闪光灯</string>
    <string name="add_todo">添加</string>

</resources>