<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/page_tree"
        android:icon="@drawable/ic_menu_project"
        android:title="@string/project_fragment" />

    <item
        android:id="@+id/page_square"
        android:icon="@drawable/ic_menu_square"
        android:title="@string/square_fragment" />

    <item
        android:id="@+id/page_platform"
        android:icon="@drawable/ic_menu_platform"
        android:title="@string/platform_fragment" />

    <item
        android:id="@+id/page_mine"
        android:icon="@drawable/ic_menu_mine"
        android:title="@string/mine_fragment" />
</menu>